# PersonalAssistant_backend

./: .env.example  .gitignore  ARCHITECTURE.md  MIGRATION_GUIDE.md  README.md  alembic.ini  docker-compose.yml  main_integration_example.py  pyproject.toml
.trae/rules/: AGENTS.md  DO-DONOT.md
alembic/: env.py
alembic/versions/: 20260429_223500_init_planning_tables.py  20260430_120000_add_memories_table.py
docs/: frontend-api.md
src/: main.py
src/adapters/: chroma_adapter.py  in_memory_memory_repo.py  in_memory_task_repo.py  pg_repo.py
src/core/exceptions/: app_exception.py
src/core/ports/: llm_client_port.py  memory_port.py  task_port.py  tool_port.py
src/core/prompts/: __init__.py  dynamic_prompts.py  persona_profiles.py  planning_prompts.py  prompt_builder.py  system_prompts.py
src/infra/: llm_router.py
src/infra/db/: init_db.py  session.py
src/infra/llm_adapters/: base_adapter.py  deepseek_adapter.py  openai_adapter.py  openai_compatible_adapter.py  openrouter_adapter.py
src/parsers/: shadow_parser.py
src/routers/api_v1/: chat.py  companion.py  dependencies.py  planning.py
src/routers/streams/: chat.py
src/schemas/: chat.py  common.py  companion.py  htn.py  planning.py  sse.py
src/services/: companion.py  llm_client.py  memory_service.py  mental_state.py  orchestrator.py  planning.py  proactive.py
src/workers/: outbox_worker.py
tests/integration/: test_orchestrator.py  test_planning_api.py
tests/unit/: test_companion_service.py  test_memory_repository.py  test_memory_service.py  test_mental_state.py  test_shadow_parser.py
